--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["MP 8020 Team"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.70.0"
+uvicorn = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
