--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["MP 8020 Team"]
 python = "^3.9"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
+numpy = "1.20.3"
+transformers = "4.12.3"
+flair = "0.9"
+scikit-learn = "1.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
