--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["MP 8020 Team"]
 python = "^3.9"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
-numpy = "1.20.3"
+numpy = "^1.20.3"
 transformers = "4.12.3"
 flair = "0.9"
 scikit-learn = "1.0.1"
