--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,8 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
+  release:
+    types: [published]
 
 env:
   REGISTRY: ghcr.io
